<resources>
    <string name="app_name">TimeCalc</string>
    <string name="btnResult">=</string>
    <string name="eTxtResult">Результат</string>
    <string name="SwitchPlus">Сложить</string>
    <string name="SwitchMinus">Вычесть</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="eTxtTimeHint">Время в формате чч:мм[:cc]</string>
    <string name="Reverse">Поменять местами</string>
    <string name="eTxtTime1">Введите время 1</string>
    <string name="eTxtTime2">Введите время 2</string>
    <string name="ClearField">Очистить поле</string>
    <string name="btnCopy">Copy</string>
    <string name="btnCopyTo1">Copy to 1</string>
    <string name="btnCopyTo2">Copy to 2</string>
</resources>