<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txtTime1ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/switchConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eTxtLayoutTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtTime1"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/eTxtTimeHint"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/eTxtTime1"
                android:inputType="time"
                android:maxLength="8"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnClear1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:drawable/ic_notification_clear_all"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toEndOf="@+id/eTxtLayoutTime1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307" />

        <Button
            android:id="@+id/btnPasteTo1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/actionModeCloseDrawable"
            android:rotation="180"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/eTxtLayoutTime1"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/switchConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/txtTime2ConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime1ConstraintLayout">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/SwitchPlus"
            android:textColor="#A1887F"
            android:textOff="@string/Minus"
            android:textOn="@string/Plus"
            android:textSize="20sp"
            android:theme="@style/SignSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showText="true" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:drawable/stat_notify_sync"
            android:contentDescription="@string/Reverse"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchSign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txtTime2ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchConstraintLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eTxtLayoutTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtTime2"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/eTxtTimeHint"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/eTxtTime2"
                android:inputType="time"
                android:maxLength="8"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnClear2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:drawable/ic_notification_clear_all"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toEndOf="@+id/eTxtLayoutTime2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307" />

        <Button
            android:id="@+id/btnPasteTo2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/actionModeCloseDrawable"
            android:rotation="180"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/eTxtLayoutTime2"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:maxLength="8"
        android:text="@string/btnResult"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime2ConstraintLayout" />

    <TextView
        android:id="@+id/txtViewResult"
        style="@style/Theme.TimeCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/eTxtResult"
        android:maxLength="8"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <Button
        android:id="@+id/btnCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCopy"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResult" />

    <Button
        android:id="@+id/btnCopyTo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCopyTo1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCopy"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResult"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/btnCopyTo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCopyTo2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCopy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResult" />


</androidx.constraintlayout.widget.ConstraintLayout>